# sentry-native

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: example.cpp
plugins/crashpad_plus/: CMakeLists.txt  crashpad_plus.h  crashpad_plus_mac.cc  crashpad_plus_win.cc
plugins/crashpad_plus/sentry/: sentry_event_utils.h  sentry_event_utils_mac.cc  sentry_event_utils_win.cc
turbo/turbo_crashpad/: CMakeLists.txt  turbo_crashpad.cc  turbo_crashpad.h  turbo_crashpad_win.cc
turbo/turbo_crashpad/sentry/: sentry_event_utils.cc  sentry_event_utils.h  sentry_event_utils_mac.cc  sentry_event_utils_win.cc
